# stingray-vision

./: .gitmodules  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
src/prosilica_camera/: CMakeLists.txt  package.xml
src/prosilica_camera/camera_info/: gc750c.yaml
src/prosilica_camera/cfg/: ProsilicaCamera.cfg  ProsilicaCamera.cfgc
src/prosilica_camera/cfg/cpp/prosilica_camera_hammerhead/: ProsilicaCameraConfig.h
src/prosilica_camera/docs/: ProsilicaCameraConfig-usage.dox
src/prosilica_camera/launch/: generic.launch  prosilica.launch
src/prosilica_camera/src/prosilica_camera_hammerhead/cfg/: ProsilicaCameraConfig.py
src/prosilica_drivers/: CMakeLists.txt  package.xml
src/prosilica_stingray/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
src/stereo_rig/src/bosch_drivers/.svn/: entries
src/stereo_rig/src/bosch_drivers/amtec/.svn/: all-wcprops  entries
src/stereo_rig/src/bosch_drivers/bma180/.svn/: all-wcprops  entries
src/stereo_rig/src/bosch_drivers/bma180/src/: bma180s.cpp
src/stereo_rig/src/bosch_drivers/bma180_driver/.svn/: all-wcprops  entries
src/stereo_rig/src/bosch_drivers/bmc050_driver/.svn/: all-wcprops
src/stereo_rig/src/bosch_drivers/bmp085/.svn/: entries
src/stereo_rig/src/bosch_drivers/bmp085_driver/.svn/: all-wcprops  entries
src/stereo_rig/src/bosch_drivers/bmp085_driver/src/: bmp085.cpp
src/stereo_rig/src/bosch_drivers/bosch_drivers_basic_nodes/.svn/: all-wcprops  entries
src/stereo_rig/src/bosch_drivers/bosch_drivers_common/.svn/: all-wcprops
src/stereo_rig/src/bosch_drivers/bosch_drivers_example_nodes/.svn/: all-wcprops
src/stereo_rig/src/bosch_drivers/encoder_driver/.svn/: all-wcprops
src/stereo_rig/src/bosch_drivers/gpio_driver/.svn/: all-wcprops  entries
src/stereo_rig/src/bosch_drivers/gumstix_memread_bma180/.svn/: entries
src/stereo_rig/src/bosch_drivers/gumstix_memwrite_bma180/.svn/: all-wcprops
src/stereo_rig/src/bosch_drivers/pwm_driver/.svn/: all-wcprops
src/stereo_rig/src/bosch_drivers/smi540/.svn/: entries
src/stereo_rig/src/bosch_drivers/sub20/.svn/: entries
src/stereo_rig/src/bosch_drivers/uniserial/.svn/: entries
src/stereo_rig/src/bosch_drivers/usb_cam/.svn/: entries
src/stereo_rig/src/microstrain_3dmgx2_imu/.svn/: all-wcprops  entries
src/stereo_rig/src/microstrain_3dmgx2_imu/include/.svn/: entries
src/stereo_rig/src/microstrain_3dmgx2_imu/srv/.svn/: all-wcprops
src/stereo_slam/: CMakeLists.txt  package.xml
src/stereo_slam/launch/: mono.launch  stereo.launch
src/stereo_slam/src/: stereo_slam.cpp
src/vision_start/: CMakeLists.txt  package.xml  vision.launch  vision.machine
src/vision_start/calibrate/: calibrate_mono.launch  calibrate_stereo.launch  calibrate_stereo_checkerboard.launch
src/vision_start/config/: mono.xml  stereo.xml
src/vision_start/record/: play_stereo_bag.launch  record_mono.launch  record_stereo.launch
src/vslam/: CMakeLists.txt  package.xml
stereo_rig/src/bosch_drivers/.svn/: all-wcprops
stereo_rig/src/bosch_drivers/adc_driver/.svn/: all-wcprops  entries
stereo_rig/src/bosch_drivers/adc_driver/include/.svn/: all-wcprops
stereo_rig/src/bosch_drivers/adc_driver/src/.svn/: all-wcprops
stereo_rig/src/bosch_drivers/adc_sub20/.svn/: all-wcprops  entries
stereo_rig/src/bosch_drivers/adc_sub20/include/.svn/: all-wcprops
stereo_rig/src/bosch_drivers/adc_sub20/launch/.svn/: entries
stereo_rig/src/bosch_drivers/adc_sub20/msg/.svn/: entries
stereo_rig/src/bosch_drivers/adc_sub20/src/.svn/: entries
stereo_rig/src/bosch_drivers/amtec/include/.svn/: all-wcprops
stereo_rig/src/bosch_drivers/amtec/msg/.svn/: all-wcprops
stereo_rig/src/bosch_drivers/amtec/src/.svn/: all-wcprops
stereo_rig/src/bosch_drivers/amtec/srv/.svn/: all-wcprops  entries
stereo_rig/src/bosch_drivers/arduino_interface/.svn/: all-wcprops  entries
stereo_rig/src/bosch_drivers/arduino_interface/include/.svn/: entries
stereo_rig/src/bosch_drivers/arduino_interface/src/.svn/: entries
stereo_rig/src/bosch_drivers/bma180/include/.svn/: all-wcprops
stereo_rig/src/bosch_drivers/bma180/include/bma180/: bma180.h  bma180s.h
stereo_rig/src/bosch_drivers/bma180/launch/.svn/: entries
stereo_rig/src/bosch_drivers/bma180/msg/.svn/: entries
stereo_rig/src/bosch_drivers/bma180/src/.svn/: all-wcprops  entries
stereo_rig/src/bosch_drivers/bma180_driver/include/.svn/: entries
stereo_rig/src/bosch_drivers/bma180_driver/msg/.svn/: all-wcprops  entries
stereo_rig/src/bosch_drivers/bma180_driver/src/.svn/: entries
stereo_rig/src/bosch_drivers/bmc050_driver/.svn/: entries
stereo_rig/src/bosch_drivers/bmc050_driver/include/.svn/: entries
stereo_rig/src/bosch_drivers/bmc050_driver/msg/.svn/: all-wcprops  entries
stereo_rig/src/bosch_drivers/bmc050_driver/src/: bmc050.cpp  bmc050_parameters.cpp
stereo_rig/src/bosch_drivers/bmc050_driver/src/.svn/: all-wcprops
stereo_rig/src/bosch_drivers/bmg160_driver/.svn/: all-wcprops  entries
stereo_rig/src/bosch_drivers/bmg160_driver/include/.svn/: all-wcprops
stereo_rig/src/bosch_drivers/bmp085/.svn/: all-wcprops
stereo_rig/src/bosch_drivers/bmp085/msg/.svn/: all-wcprops
stereo_rig/src/bosch_drivers/bosch_drivers_common/.svn/: entries
stereo_rig/src/bosch_drivers/bosch_drivers_example_nodes/.svn/: entries
stereo_rig/src/bosch_drivers/encoder_driver/.svn/: entries
stereo_rig/src/bosch_drivers/gumstix_memread_bma180/.svn/: all-wcprops
stereo_rig/src/bosch_drivers/gumstix_memwrite_bma180/.svn/: entries
stereo_rig/src/bosch_drivers/photo/.svn/: all-wcprops  entries
stereo_rig/src/bosch_drivers/pwm_driver/.svn/: entries
stereo_rig/src/bosch_drivers/smi540/.svn/: all-wcprops
stereo_rig/src/bosch_drivers/sub20/.svn/: all-wcprops
stereo_rig/src/bosch_drivers/sub20_interface/.svn/: all-wcprops  entries
stereo_rig/src/bosch_drivers/uniserial/.svn/: all-wcprops
stereo_rig/src/microstrain_3dmgx2_imu/include/.svn/: all-wcprops
stereo_rig/src/microstrain_3dmgx2_imu/src/.svn/: all-wcprops  entries
stereo_rig/src/microstrain_3dmgx2_imu/srv/.svn/: entries
(+163 files in other folders)
